# NuhxBoard

./: Cargo.toml  dist-workspace.toml  flake.nix
.github/workflows/: release.yml
crates/iced-multi-window/src/: lib.rs
crates/logic/: Cargo.toml
crates/logic/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: layout.rs  settings.rs  style.rs
schemas/: layout.json  style.json
src/: main.rs  message.rs  nuhxboard.rs
src/ui/: error.rs  main.rs  mod.rs
