[package]
name = "nuhxboard"
description = "Cross-platform input visualizer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
exclude = [
  "keyboards",
  ".github",
  "NuhxBoard.xcf",
  "README.adoc",
  "deny.toml",
  "dist-workspace.toml",
  "flake.*",
  "justfile",
  "keyboards.zip",
  "schemas",
  "wix",
  "CHANGELOG.md",
  "KEYCODES.adoc",
]

[package.metadata.wix]
upgrade-guid = "531C0F4B-FFE1-4F4C-BD42-A8449DB1E0BD"
path-guid = "6BCE453A-D71C-4EF5-A85D-B4A43D72A35F"
license = false
eula = false

[dependencies]
color-eyre = { version = "0.6.5", default-features = false }
display-info.workspace = true
futures.workspace = true
geo.workspace = true
home = "0.5.12"
image = { version = "0.25.10", features = ["ico"] }
reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "blocking",
  "rustls",
] }
serde_json.workspace = true
zip = "8.3.1"
nuhxboard-types = { path = "crates/types", version = "1.0.0" }
rdevin.workspace = true
nalgebra = "0.34.1"
thiserror.workspace = true
confy = "2.0.0"
tracing.workspace = true
tracing-subscriber = "0.3.23"
tracing-appender = "0.2.4"
clap = { version = "4.6.0", features = ["derive"] }
colorgrad.workspace = true

[build-dependencies]
schemars.workspace = true
nuhxboard-types = { path = "crates/types", version = "1.0.0" }
serde_json.workspace = true

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "GPL-3.0"
authors = ["Devin Droddy <devin.droddy@gmail.com>"]
repository = "https://github.com/justDeeevin/NuhxBoard"
keywords = ["keyboard", "streaming", "overlay", "linux", "nohboard"]
categories = ["visualization"]

[workspace.dependencies]
geo = "0.32.0"
serde_json = "1.0.149"
futures = "0.3.32"
rdevin = "0.1.0"
display-info = "=0.5.7"
schemars = "1.2.1"
thiserror = "2.0.18"
colorgrad = "0.8.0"
tracing = "0.1.44"
gpui = { git = "https://github.com/zed-industries/zed", rev = "667b43083ced06e75c87d1711d89afe917f1d73e" }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
