[package]
name = "nuhxboard"
description = "Cross-platform input visualizer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
exclude = [
  "keyboards",
  ".github",
  "NuhxBoard.xcf",
  "dist-workspace.toml",
  "flake.*",
  "justfile",
  "keyboards.zip",
  "schemas",
  "wix",
  "CHANGELOG.md",
]

[package.metadata.wix]
upgrade-guid = "531C0F4B-FFE1-4F4C-BD42-A8449DB1E0BD"
path-guid = "6BCE453A-D71C-4EF5-A85D-B4A43D72A35F"
license = false
eula = false

[dependencies]
iced-multi-window = { path = "./crates/iced-multi-window", version = "2.0.0" }
smol.workspace = true
color-eyre = { version = "0.6.5", default-features = false }
display-info.workspace = true
geo.workspace = true
iced = { workspace = true, features = ["image", "smol"] }
iced_aw = { version = "0.13.1", default-features = false, features = [
  "quad",
  "context_menu",
] }
image = { version = "0.25.10", features = ["ico"] }
reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "blocking",
  "rustls",
] }
serde_json.workspace = true
zip = "8.5.1"
nuhxboard-types = { path = "crates/types", version = "1.0.0" }
nuhxboard-logic = { path = "crates/logic", version = "1.0.0" }
rdevin.workspace = true
nalgebra = "0.34.2"
thiserror.workspace = true
confy = "2.0.0"
tracing.workspace = true
tracing-subscriber = "0.3.23"
colorgrad.workspace = true
futures = "0.3.32"

[build-dependencies]
schemars.workspace = true
nuhxboard-types = { path = "crates/types", version = "1.0.0" }
serde_json.workspace = true

[features]
debug = ["iced/debug"]

[workspace]
resolver = "2"
members = ["crates/logic", "crates/types", "crates/iced-multi-window"]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "GPL-3.0"
authors = ["Devin Droddy <devin.droddy@gmail.com>"]
repository = "https://github.com/justDeeevin/NuhxBoard"
keywords = ["keyboard", "streaming", "overlay", "linux", "nohboard"]
categories = ["visualization"]

[workspace.dependencies]
geo = "0.32.0"
iced = "0.14.0"
serde_json = "1.0.149"
rdevin = "0.1.0"
display-info = "0.5.9"
schemars = "1.2.1"
smol = "2.0.2"
thiserror = "2.0.18"
colorgrad = "0.8.0"
tracing = "0.1.44"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
