[package]
name = "nuhxboard-types"
description = "Types for NuhxBoard configuration"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
display-info.workspace = true
geo.workspace = true
schemars.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json.workspace = true
bitflags = "2.10.0"
colorgrad.workspace = true
tracing.workspace = true
gpui.workspace = true
